--- a/index.html
+++ b/index.html
@@ -39,20 +39,63 @@
 
     <div class="even">
       <h2><a id="projects" class="anchor"></a>Projects</h2>
-      <div>
-        <h3>Hack Underflow</h3>
+      <div class="project">
+        <div class="right">
+          <img src="./hack_underflow.png" >
+        </div>
+        <div class="left">
+          <h3>Hack Underflow</h3>
+          <p>Stack Overflow clone. This webpage has the questions, answers, comments, and editing features of Stack Overflow. It started as a Ruby on Rails application and converted into a Backbone.js application</p>
+          <p><em>This project uses:</em></p>
+          <ul class="courses">
+            <li>&bull; Foundation stylesheets</li>
+            <li>&bull; nokogiri</li>
+            <li>&bull; kaminari</li>
+            <li>&bull; friendly_id</li>
+            <li>&bull; underscore.inflector</li>
+            <li>&bull; serializeJSON</li>
+          </ul>
+        </div>
       </div>
-      <div>
+
+      <div class="project">
+        <div class="right">
+          <img src="./crud_generator.png">
+        </div>
+        <div class="left">
+        <br>
+        <br>
+        <br>
         <h3>crud_generator</h3>
+        <p>Rubygem that automatically creates default CRUD actions for your Rails controllers. (Inspired by a week of creating almost identical Rails Controllers for multiple projects.)</p>
+        <br>
+        <br>
+        <br>
+        </div>
       </div>
-      <div>
+
+      <div class="project">
+        <div class="right">
+          <img src="./ac_lite.png">
+        </div>
+        <div class="left">
+        <br>
+        <br>
+        <br>
         <h3>Active-Record-Lite</h3>
+        <p>Reverse engineered version of the find, where, has many, belongs to, has one through, and has many through methods of ActiveRecord::Base.</p>
+        <br>
+        <br>
+        <br>
+        </div>        
       </div>
-      <div>
+      <div class="project">
         <h3>Rails-Lite</h3>
+        <p>Recreation of ActionController::Base and Application.routes using WEBrick.</p>
       </div>
-      <div>
+      <div class="project">
         <h3>Cocktail Enthusiasts</h3>
+        <p>Discussion website for cocktails, with voting and comments, built with Rails. (This was the first Rails application I created, which I still occasionally edit and update for fun.)</p>
       </div>
     </div>
 
