Added more pics and styled them

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </ul>
     </div>
 
-    <div class="even">
+    <div class="even projects">
       <h2><a id="projects" class="anchor"></a>Projects</h2>
       <div class="project">
         <div class="right">
@@ -66,8 +66,18 @@
         <br>
         <br>
         <br>
+        <br>
+        <br>
+        <br>
         <h3>crud_generator</h3>
         <p>Rubygem that automatically creates default CRUD actions for your Rails controllers. (Inspired by a week of creating almost identical Rails Controllers for multiple projects.)</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         <br>
         <br>
         <br>
@@ -87,20 +97,50 @@
         <br>
         <br>
         <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         </div>        
       </div>
       <div class="project">
+        <div class="right">
+          <img src="./rails_lite.png">
+        </div>
+        <div class="left">
+        <br>
+        <br>
+        <br>
         <h3>Rails-Lite</h3>
         <p>Recreation of ActionController::Base and Application.routes using WEBrick.</p>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        </div>
       </div>
-      <div class="project">
+      <div class="project"><div class="right">
+          <img src="./cocktail_enthusiasts.png">
+        </div>
+        <div class="left">
+        <br>
+        <br>
+        <br>
         <h3>Cocktail Enthusiasts</h3>
         <p>Discussion website for cocktails, with voting and comments, built with Rails. (This was the first Rails application I created, which I still occasionally edit and update for fun.)</p>
+        </div>
       </div>
     </div>
 
     <div class="odd">
-      <h2><a id="bio" class="anchor"></a>Summary</h2>
+      <h2><a id="bio" class="anchor"></a>Bio</h2>
       <p>After dabbling in politics and acting, I went to UC Berkeley and studied Music and Philosophy. I discovered that I was particularly passionate about logic, but spent a lot of my time as an undergrad figuring out what I would do after I graduated.</p>
       <p>Early in my last semester at UC Berkeley, I went to a RailsBridge (a programming event for women that uses scaffolding to demonstrate Ruby on Rails). From there, I started creating and experimenting with Ruby on Rails applications (the main one being Cocktail Enthusiasts), as my first excursion into programming. I had previously worked with HTML before, but had not yet tried programming. I quickly realized that all the things I loved about logic were also important for programming and have continued programming since.</p>
       <p>I am currently looking for a position as a backend web developer. At the moment, I have worked with Ruby, Rails, SQL, JavaScript, jQuery, and Backbone. (For one project, I built a full stack Rails application and then added Backbone).</p>
