Added links to projects section

--- a/index.html
+++ b/index.html
@@ -63,10 +63,12 @@
       <h2><a id="projects" class="anchor"></a>Projects</h2>
       <div class="project">
         <div class="right">
-          <img src="./hack_underflow.png" >
+          <a href="http://www.hackunderflow.com">
+            <img src="./hack_underflow.png" >
+          </a>
         </div>
         <div class="left">
-          <h3>Hack Underflow</h3>
+          <h3><a href="http://www.hackunderflow.com">Hack Underflow</a></h3>
           <p>Stack Overflow clone. This webpage has the questions, answers, comments, and editing features of Stack Overflow. It started as a Ruby on Rails application and converted into a Backbone.js application</p>
           <p><em>This project uses:</em></p>
           <ul class="courses">
@@ -82,13 +84,15 @@
 
       <div class="project">
         <div class="right">
-          <img src="./crud_generator.png">
+          <a href="http://git.io/0irGJw">
+            <img src="./crud_generator.png">
+          </a>
         </div>
         <div class="left">
         <br>
         <br>
         <br>
-        <h3>crud_generator</h3>
+        <h3><a href="http://git.io/0irGJw">crud_generator</a></h3>
         <p>Rubygem that automatically creates default CRUD actions for your Rails controllers. (Inspired by a week of creating almost identical Rails Controllers for multiple projects.)</p>
         <br>
         <br>
@@ -106,13 +110,17 @@
 
       <div class="project">
         <div class="right">
-          <img src="./ac_lite.png">
+          <a href="http://git.io/4vwzFQ">
+            <img src="./ac_lite.png">
+          </a>
         </div>
         <div class="left">
         <br>
         <br>
         <br>
-        <h3>Active-Record-Lite</h3>
+        <h3><a href="http://git.io/4vwzFQ">
+          Active-Record-Lite
+        </a></h3>
         <p>Reverse engineered version of the find, where, has many, belongs to, has one through, and has many through methods of ActiveRecord::Base.</p>
         <br>
         <br>
@@ -127,13 +135,15 @@
       </div>
       <div class="project">
         <div class="right">
-          <img src="./rails_lite.png">
+          <a href="http://git.io/6XuiWg">
+            <img src="./rails_lite.png">
+          </a>
         </div>
         <div class="left">
         <br>
         <br>
         <br>
-        <h3>Rails-Lite</h3>
+        <h3><a href="http://git.io/6XuiWg">Rails-Lite</a></h3>
         <p>Recreation of ActionController::Base and Application.routes using WEBrick.</p>
         <br>
         <br>
@@ -147,13 +157,17 @@
         </div>
       </div>
       <div class="project"><div class="right">
+        <a href="http://cocktail-enthusiasts.herokuapp.com">
           <img src="./cocktail_enthusiasts.png">
+        </a>
         </div>
         <div class="left">
         <br>
         <br>
         <br>
-        <h3>Cocktail Enthusiasts</h3>
+        <h3><a href="http://cocktail-enthusiasts.herokuapp.com">
+          Cocktail Enthusiasts
+        </a></h3>
         <p>Discussion website for cocktails, with voting and comments, built with Rails. (This was the first Rails application I created, which I still occasionally edit and update for fun.)</p>
         </div>
       </div>
