Changed github and email icons to have a see-through background

--- a/index.html
+++ b/index.html
@@ -216,12 +216,12 @@
         </li>
         <li>
           <a href="https://github.com/NatashaHull">
-            <img src="http://upload.wikimedia.org/wikipedia/en/4/40/Octocat,_a_Mascot_of_Github.jpg">
+            <img src="http://spatialhadoop.cs.umn.edu/images/github-128.png">
           </a>
         </li>
         <li>
           <a href="mailto:natashaalex.hull@gmail.com">
-            <img src="http://newsroom.unl.edu/announce/files/file10337.jpg">
+            <img src="http://icons.iconarchive.com/icons/cornmanthe3rd/plex/512/Communication-email-2-icon.png">
           </a>
         </li>
       </ul>
