Made a few final changes

--- a/index.html
+++ b/index.html
@@ -63,14 +63,17 @@
       <h2><a id="projects" class="anchor"></a>Projects</h2>
       <div class="project">
         <div class="right">
-          <a href="http://www.hackunderflow.com">
+          <a target="_blank"
+          href="http://www.hackunderflow.com">
             <img src="./hack_underflow.png" >
           </a>
         </div>
         <div class="left">
-          <h3><a href="http://www.hackunderflow.com">Hack Underflow</a></h3>
+          <h3><a target="_blank"
+            href="http://www.hackunderflow.com">Hack Underflow</a></h3>
           <p>Stack Overflow clone. This webpage has the questions, answers, comments, and editing features of Stack Overflow. It started as a Ruby on Rails application and converted into a Backbone.js application</p>
-          <p><a href="https://github.com/NatashaHull/HackUnderflow" class="source-link">
+          <p><a target="_blank"
+            href="https://github.com/NatashaHull/HackUnderflow" class="source-link">
             Source Code
           </a></p>
           <p><em>This project uses:</em></p>
@@ -87,7 +90,8 @@
 
       <div class="project">
         <div class="right">
-          <a href="http://git.io/0irGJw">
+          <a target="_blank"
+          href="http://git.io/0irGJw">
             <img src="./crud_generator.png">
           </a>
         </div>
@@ -95,7 +99,8 @@
         <br>
         <br>
         <br>
-        <h3><a href="http://git.io/0irGJw">crud_generator</a></h3>
+        <h3><a target="_blank"
+          href="http://git.io/0irGJw">crud_generator</a></h3>
         <p>Rubygem that automatically creates default CRUD actions for your Rails controllers. (Inspired by a week of creating almost identical Rails Controllers for multiple projects.)</p>
         <br>
         <br>
@@ -113,7 +118,8 @@
 
       <div class="project">
         <div class="right">
-          <a href="http://git.io/4vwzFQ">
+          <a target="_blank"
+          href="http://git.io/4vwzFQ">
             <img src="./ac_lite.png">
           </a>
         </div>
@@ -121,7 +127,8 @@
         <br>
         <br>
         <br>
-        <h3><a href="http://git.io/4vwzFQ">
+        <h3><a target="_blank"
+          href="http://git.io/4vwzFQ">
           Active-Record-Lite
         </a></h3>
         <p>Reverse engineered version of the find, where, has many, belongs to, has one through, and has many through methods of ActiveRecord::Base.</p>
@@ -138,7 +145,8 @@
       </div>
       <div class="project">
         <div class="right">
-          <a href="http://git.io/6XuiWg">
+          <a target="_blank"
+          href="http://git.io/6XuiWg">
             <img src="./rails_lite.png">
           </a>
         </div>
@@ -146,7 +154,8 @@
         <br>
         <br>
         <br>
-        <h3><a href="http://git.io/6XuiWg">Rails-Lite</a></h3>
+        <h3><a target="_blank"
+          href="http://git.io/6XuiWg">Rails-Lite</a></h3>
         <p>Recreation of ActionController::Base and Application.routes using WEBrick.</p>
         <br>
         <br>
@@ -160,7 +169,8 @@
         </div>
       </div>
       <div class="project"><div class="right">
-        <a href="http://cocktail-enthusiasts.herokuapp.com">
+        <a target="_blank"
+        href="http://cocktail-enthusiasts.herokuapp.com">
           <img src="./cocktail_enthusiasts.png">
         </a>
         </div>
@@ -168,11 +178,13 @@
         <br>
         <br>
         <br>
-        <h3><a href="https://github.com/NatashaHull/cocktail-enthusiasts">
+        <h3><a target="_blank"
+          href="https://github.com/NatashaHull/cocktail-enthusiasts">
           Cocktail Enthusiasts
         </a></h3>
         <p>Discussion website for cocktails, with voting and comments, built with Rails. (This was the first Rails application I created, which I still occasionally edit and update for fun.)</p>
-        <p><a href="https://github.com/NatashaHull/CocktailEnthusiasts" class="source-link">
+        <p><a target="_blank"
+          href="https://github.com/NatashaHull/CocktailEnthusiasts" class="source-link">
           Source Code
         </a></p>
         </div>
@@ -210,12 +222,14 @@
       <h2><a id="contact" class="anchor"></a>Contact</h2>
       <ul>
         <li>
-          <a href="https://www.linkedin.com/in/natashahull/">
+          <a target="_blank"
+          href="https://www.linkedin.com/in/natashahull/">
             <img src="http://www.acrnet.org/uploadedImages/Get_Involved/Linkedin.png">
           </a>
         </li>
         <li>
-          <a href="https://github.com/NatashaHull">
+          <a target="_blank"
+          href="https://github.com/NatashaHull">
             <img src="http://spatialhadoop.cs.umn.edu/images/github-128.png">
           </a>
         </li>
