Styled a little more and changed a few other things

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href='http://fonts.googleapis.com/css?family=Convergence' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="./stylesheet.css">
   <Title>Natasha Hull-Richter</Title>
 
@@ -82,7 +83,7 @@
           <h3>
             <a id="hack-underflow" class="anchor"></a>
             <a target="_blank" href="http://www.hackunderflow.com">Hack Underflow</a>
-            <a target="_blank" href="https://github.com/NatashaHull/HackUnderflow" class="source-link">[Source Code]</a>
+            <a target="_blank" href="https://github.com/NatashaHull/HackUnderflow" class="source-link">[Github]</a>
           </h3>
           <p><strong>Hack Underflow</strong> is a Stack Overflow clone that implements the questions, answers, comments, and editing features of SO. It also has an SO-inspired points system that awards privileges (such as voting and editing) at certain point levels. Hack Underflow started life as a Ruby on Rails app, but I have since converted it into a single-page Backbone.js app.</p>
           <p>In order to seed the database of Hack Overflow with some existing questions and answers, I used <tt>nokogiri</tt> to scrape and parse a few hundred questions from Stack Overflow, for which I had to learn how XPath works.</p>
@@ -150,7 +151,7 @@
             <a target="_blank" href="http://cocktail-enthusiasts.herokuapp.com">
               Cocktail Enthusiasts
             </a>
-            <a target="_blank" href="https://github.com/NatashaHull/cocktail-enthusiasts" class="source-link">[Source Code]</a>
+            <a target="_blank" href="https://github.com/NatashaHull/cocktail-enthusiasts" class="source-link">[Github]</a>
           </h3>
           <p><b>Cocktail Enthusiasts</b> is a discussion website for cocktails, with voting and comments, built with Rails. This was the first Rails application I created, and I still occasionally edit it for fun.</p>
           <p><b>Favorite bit:</b> <tt><a target="_blank" href="https://github.com/NatashaHull/cocktail-enthusiasts/blob/master/app/assets/javascripts/design.js">design.js</a></tt>, a complex cocktail generator that holds a special place in my heart as my first major JavaScript application, messy though it may be. <a  target="_blank" href="https://cocktail-enthusiasts.herokuapp.com/design/index">[See it in action!]</a></p>
