--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href='http://fonts.googleapis.com/css?family=Convergence' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans|Convergence' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="./stylesheet.css">
   <Title>Natasha Hull-Richter</Title>
 
@@ -187,7 +187,7 @@
 
     <div class="odd last">
       <h2><a id="contact" class="anchor"></a>Contact</h2>
-      <ul>
+      <ul class="contact">
         <li>
           <a target="_blank" href="https://www.linkedin.com/in/natashahull/"><img src="http://www.acrnet.org/uploadedImages/Get_Involved/Linkedin.png"></a>
         </li>
