--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           alt="SQL"/>
         </li>
         <li>
-          <img src="http://rwdmedia.com/assets/images/javascript_logo.png"
+          <img src="https://raw.github.com/voodootikigod/logo.js/master/js.png"
           alt="JavaScript"/></li>
         <li>
           <img src="http://www.unixstickers.com/image/cache/data/stickers/python/python.sh-600x600.png"
