Replaced cocktail-enthusiiasts with markovosophers

--- a/index.html
+++ b/index.html
@@ -76,6 +76,22 @@
 
     <div class="even projects">
       <h2><a id="projects" class="anchor"></a>Projects</h2>
+      <div class="project"><div class="right">
+        <a target="_blank" href="http://www.markovosophers.com">
+          <img src="./markovosophers.png">
+        </a>
+        </div>
+        <div class="left">
+          <h3>
+            <a target="_blank" href="http://www.markovosophers.com">
+              Markovosophers
+            </a>
+            <a target="_blank" href="https://github.com/NatashaHull/TextGenerator" class="source-link">[Github]</a>
+          </h3>
+          <p><b>Markovosophers</b> is a 3-gram text generator Sinatra and Redis app deployed on AWS. This is the first application I have deployed that uses either Sinatra or Redis and it is the first application I have deployed on AWS.</p>
+          <p><b>Favorite bit:</b> <tt><a target="_blank" href="htthttps://github.com/NatashaHull/TextGenerator/blob/master/lib/2gram_word_table.rb">2gram_word_table.rb</a></tt>, the initial version of Markovosophers's <tt>WordTable</tt>, a concise (43 lines) Markov chain model.</p>
+        </div>
+      </div>
       <div class="project">
         <div class="right">
           <a target="_blank"
@@ -143,22 +159,6 @@
           </h3>
           <p><b>Rails-Lite</b> is a recreation of Rails's <tt>ActionController::Base</tt> and <tt>Application.routes</tt> using WEBrick.</p>
           <p><b>Favorite bit:</b> <tt><a target="_blank" href="https://github.com/NatashaHull/AppAcademyProjects/blob/master/Week5/W5D3/rails_lite-skeleton/lib/rails_lite/router.rb">router.rb</a></tt>, a concise implementation of Rails's router.</p>
-        </div>
-      </div>
-      <div class="project"><div class="right">
-        <a target="_blank" href="http://cocktail-enthusiasts.herokuapp.com">
-          <img src="./cocktail_enthusiasts.png">
-        </a>
-        </div>
-        <div class="left">
-          <h3>
-            <a target="_blank" href="http://cocktail-enthusiasts.herokuapp.com">
-              Cocktail Enthusiasts
-            </a>
-            <a target="_blank" href="https://github.com/NatashaHull/cocktail-enthusiasts" class="source-link">[Github]</a>
-          </h3>
-          <p><b>Cocktail Enthusiasts</b> is a discussion website for cocktails, with voting and comments, built with Rails. This was the first Rails application I created, and I still occasionally edit it for fun.</p>
-          <p><b>Favorite bit:</b> <tt><a target="_blank" href="https://github.com/NatashaHull/cocktail-enthusiasts/blob/master/app/assets/javascripts/design.js">design.js</a></tt>, a complex cocktail generator that holds a special place in my heart as my first major JavaScript application, messy though it may be. <a  target="_blank" href="https://cocktail-enthusiasts.herokuapp.com/design/index">[See it in action!]</a></p>
         </div>
       </div>
     </div>
