Fixed typo in link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <a target="_blank" href="https://github.com/NatashaHull/TextGenerator" class="source-link">[Github]</a>
           </h3>
           <p><b>Markovosophers</b> is a 3-gram text generator Sinatra and Redis app deployed on AWS. This is the first application I have deployed that uses either Sinatra or Redis and it is the first application I have deployed on AWS.</p>
-          <p><b>Favorite bit:</b> <tt><a target="_blank" href="htthttps://github.com/NatashaHull/TextGenerator/blob/master/lib/2gram_word_table.rb">2gram_word_table.rb</a></tt>, the initial version of Markovosophers's <tt>WordTable</tt>, a concise (43 lines) Markov chain model.</p>
+          <p><b>Favorite bit:</b> <tt><a target="_blank" href="https://github.com/NatashaHull/TextGenerator/blob/master/lib/2gram_word_table.rb">2gram_word_table.rb</a></tt>, the initial version of Markovosophers's <tt>WordTable</tt>, a concise (43 lines) Markov chain model.</p>
         </div>
       </div>
       <div class="project">
