Commented out objective

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li class="name">
         <a href="#objective">Natasha Hull-Richter</a>
       </li>
-      <li><a href="#objective">Objective</a></li>
+      <!-- <li><a href="#objective">Objective</a></li> -->
       <li><a href="#skills">Skills</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#bio">Bio</a></li>
@@ -24,10 +24,10 @@
   </div>
 
   <div class="content">
-    <div class="even objective">
+    <!-- <div class="even objective">
       <h2><a id="objective" class="anchor"></a>Objective</h2>
       <p>I'm looking for a <strong>junior web developer</strong> position that's either <strong>back-end</strong> or <strong>full-stack</strong>. <br> (I like JavaScript too, but I prefer mapping out data relationships to wrangling with the browser.) <br> My experience is mostly with <strong>Ruby on Rails</strong>, but I'm language-agnostic and <strong>a quick learner</strong>. <br> I'm especially interested in the applications of <strong>artificial intelligence</strong>. </p>
-    </div>
+    </div> -->
 
     <div class="odd">
       <h2><a id="skills" class="anchor"></a>Skills <span style="font-size: 0.7em; font-weight: normal; font-style: italic;">(mouse over!)</span></h2>
