Updating bio to be more recent.

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
 
     <div class="odd">
       <h2><a id="bio" class="anchor"></a>Bio</h2>
-      <p>After dabbling in politics and acting, I went to UC Berkeley and studied Music and Philosophy. I discovered that I was particularly passionate about logic, but spent a lot of my time as an undergrad figuring out what I would do after I graduated.</p>
-      <p>Early in my last semester at UC Berkeley, I went to a RailsBridge (a programming event for women that uses scaffolding to demonstrate Ruby on Rails). From there, I started creating and experimenting with Ruby on Rails applications (the main one being Cocktail Enthusiasts), as my first excursion into programming. I quickly realized that all the things I loved about logic were also important for programming and have continued programming since.</p>
+      <p>Over two and a half years, I went to a RailsBridge (a programming event for women that uses scaffolding to demonstrate Ruby on Rails) and started learning to program. From there, I started creating and experimenting with Ruby on Rails applications (the main one being Cocktail Enthusiasts), as my first excursion into programming.</p>
+      <p>I am now a web developer who has worked on an e-commerce site for a book publishing company for over a year and a half. During that time, I have helped Blurb open up new distribution channels, use more up to date technologies, cut down the number of testing frameworks we use in our main Rails repository, helped establish the conventions for our unit testing of our Ember.js application as well as write the vast majority of the non-test code in that web application. I have learned a lot about continuous deployment and how to simultaneously only roll out features when they have been fully tested and have even helped train other engineers who are more junior than me.</p>
     </div>
 
     <div class="even">
