Add blurb work experience and fix linkedin icon

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <div id="nav">
     <ul>
       <li class="name">
-        <a href="#objective">Natasha Hull-Richter</a>
+        <a href="#experience">Natasha Hull-Richter</a>
       </li>
-      <!-- <li><a href="#objective">Objective</a></li> -->
+      <li><a href="#experience">Experience</a></li>
       <li><a href="#skills">Skills</a></li>
       <li><a href="#projects">Projects</a></li>
       <li><a href="#bio">Bio</a></li>
@@ -24,10 +24,21 @@
   </div>
 
   <div class="content">
-    <!-- <div class="even objective">
-      <h2><a id="objective" class="anchor"></a>Objective</h2>
-      <p>I'm looking for a <strong>junior web developer</strong> position that's either <strong>back-end</strong> or <strong>full-stack</strong>. <br> (I like JavaScript too, but I prefer mapping out data relationships to wrangling with the browser.) <br> My experience is mostly with <strong>Ruby on Rails</strong>, but I'm language-agnostic and <strong>a quick learner</strong>. <br> I'm especially interested in the applications of <strong>artificial intelligence</strong>. </p>
-    </div> -->
+    <div class="even experience">
+      <h2><a id="experience" class="anchor"></a>Experience</h2>
+      <img src="./blurb_logo.png">
+      <p><strong>Software Engineer</strong></p>
+      <p>Blurb</p>
+      <p>Feburary 2014 - Present | San Francisco, CA</p>
+      <ul>
+        <li>&#x2713 Wrote yaml parsing and writing for an automated translation app.</li>
+        <li>&#x2713 Moved deprecated Test::Unit tests into either RSpec and Cucumber.</li>
+        <li>&#x2713 Replaced the remnants of Classic Pagination (a deprecated, inefficient Rails pagination plugin) with references to Will Paginate.</li>
+        <li>&#x2713 Created Blurb's conventions for the Ember-QUnit tests in Blurb's Ember repository.</li>
+        <li>&#x2713 Learned the more complicated parts of Blurb's code-base through documenting them in RDoc.</li>
+        <li>&#x2713 Helped train less experienced employees in learning Blurb's main repository and Ruby on Rails conventions.</li>
+      </ul>
+    </div>
 
     <div class="odd">
       <h2><a id="skills" class="anchor"></a>Skills <span style="font-size: 0.7em; font-weight: normal; font-style: italic;">(mouse over!)</span></h2>
@@ -192,7 +203,7 @@
       <h2><a id="contact" class="anchor"></a>Contact</h2>
       <ul class="contact">
         <li>
-          <a target="_blank" href="https://www.linkedin.com/in/natashahull/"><img src="http://www.acrnet.org/uploadedImages/Get_Involved/Linkedin.png"></a>
+          <a target="_blank" href="https://www.linkedin.com/in/natashahull/"><img src="./linkedin_icon.png"></a>
         </li>
         <li>
           <a target="_blank" href="https://github.com/NatashaHull"><img src="http://spatialhadoop.cs.umn.edu/images/github-128.png"></a>
